--- a/app/src/main/res/layout/activity_activity1.xml
+++ b/app/src/main/res/layout/activity_activity1.xml
@@ -10,7 +10,25 @@
         android:layout_height="wrap_content"
         android:text="ADD INFO"
         android:id="@+id/info"
-        android:layout_marginBottom="67dp"
+        android:layout_marginBottom="52dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="display"
+        android:id="@+id/disp"
+        android:layout_alignTop="@+id/info"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="clearDB"
+        android:id="@+id/clr"
+        android:layout_alignTop="@+id/info"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
